--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/almostBlack"
     tools:ignore="HardcodedText"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
     <ImageView
         android:id="@+id/history"
         android:layout_width="wrap_content"
